--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -94,7 +94,18 @@
    "source": [
     "annotated_apnea_events = sliding_window_dataset.apnea_events\n",
     "print(f\"{len(annotated_apnea_events)} apnea events:\")\n",
-    "print(\" - \" + \"\\n - \".join([f\"#{i}: {evt}\" for i, evt in enumerate(annotated_apnea_events)]))"
+    "print(\" - \" + \"\\n - \".join([f\"#{i}: {evt}\" for i, evt in enumerate(annotated_apnea_events)]))\n",
+    "\n",
+    "# Enrich whole sliding window dataset by an events outline\n",
+    "annotated_events_outline_mat = np.zeros(shape=(len(sliding_window_dataset.signals),))\n",
+    "for apnea_event in annotated_apnea_events:\n",
+    "    start_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.start, method=\"nearest\")\n",
+    "    end_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.end, method=\"nearest\")\n",
+    "    annotated_events_outline_mat[start_idx:end_idx] = 10.0\n",
+    "annotated_events_outline_series = pd.Series(data=annotated_events_outline_mat, index=sliding_window_dataset.signals.index)\n",
+    "sliding_window_dataset.signals[\"Annotated apnea events\"] = annotated_events_outline_series\n",
+    "\n",
+    "del annotated_events_outline_series, annotated_events_outline_mat"
    ]
   },
   {
@@ -113,10 +124,7 @@
     "window_center_point = event.start + (event.end-event.start)/2\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
     "\n",
-    "event_outline = pd.Series(data=[0, 1, 0, 0], index=[window_center_point-pd.Timedelta(\"1 minute\"), event.start, event.end, window_center_point+pd.Timedelta(\"1 minute\")], name=f\"Annotated apnea event #{event_num} ({event.aux_note}), {(event.end-event.start).total_seconds():.1f}s\")\n",
-    "data = pd.concat([window_data.signals, event_outline], axis=1).fillna(method=\"pad\")\n",
-    "\n",
-    "_ = data.plot(figsize=(20, 10), subplots=True)"
+    "_ = window_data.signals.plot(figsize=(20, 10), subplots=True)"
    ]
   },
   {
@@ -158,8 +166,7 @@
     "\n",
     "#####\n",
     "\n",
-    "event_outline = pd.Series(data=[0, 20, 0, 0], index=[window_center_point-pd.Timedelta(\"1 minute\"), event.start, event.end, window_center_point+pd.Timedelta(\"1 minute\")], name=f\"Annotated apnea event #{event_num} ({event.aux_note})\")\n",
-    "data = pd.concat([window_data.signals[signal_name], peaks_ser, event_outline], axis=1).fillna(method=\"pad\")\n",
+    "data = pd.concat([window_data.signals[signal_name], peaks_ser, window_data.signals[\"Annotated apnea events\"]], axis=1).fillna(method=\"pad\")\n",
     "\n",
     "data.plot(figsize=(20,7), subplots=False)\n",
     "\n",
@@ -189,7 +196,7 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 22\n",
+    "event_num = 2\n",
     "signal_name = \"AIRFLOW\"\n",
     "event = annotated_apnea_events[event_num]\n",
     "\n",
@@ -222,9 +229,7 @@
     "\n",
     "\n",
     "\n",
-    "event_outline = pd.Series(data=[0, 7, 0, 0], index=[window_center_point-pd.Timedelta(\"1 minute\"), event.start, event.end, window_center_point+pd.Timedelta(\"1 minute\")], name=f\"Annotated apnea event #{event_num} ({event.aux_note}), {(event.end-event.start).total_seconds():.1f}s\")\n",
-    "data = pd.concat([window_data.signals[\"AIRFLOW\"], event_outline, clusters_ser], axis=1).fillna(method=\"pad\")\n",
-    "event_outline = data[event_outline.name]\n",
+    "data = pd.concat([window_data.signals[\"AIRFLOW\"], clusters_ser, window_data.signals[\"Annotated apnea events\"]], axis=1).fillna(method=\"pad\")\n",
     "\n",
     "data.plot(figsize=(20,10), subplots=False)\n",
     "plt.axhline(y=overall_baseline, linestyle='--', color=\"pink\")\n",
