- Made AIRFLOW-based apnea-detection code jittable - Added overlaps() function to EnduringEvents

--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -40,7 +40,7 @@
     "from util.datasets.sliding_window import SlidingWindowDataset\n",
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
     "from util.mathutil import get_peaks, PeakType, cluster_1d, Cluster\n",
-    "from util.rule_based_apnea_detector import _detect_airflow_apnea_areas__new\n",
+    "from util.rule_based_apnea_detector import detect_apneas, _detect_airflow_apnea_areas\n",
     "\n",
     "# Some preparations to pretty-print tensors & ndarrays\n",
     "np.set_printoptions(edgeitems=10)\n",
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "annotated_apnea_events = sliding_window_dataset.apnea_events\n",
-    "print(f\"{len(annotated_apnea_events)} apnea events:\")\n",
+    "print(f\"{len(annotated_apnea_events)} annotated apnea events:\")\n",
     "print(\" - \" + \"\\n - \".join([f\"#{i}: {evt}\" for i, evt in enumerate(annotated_apnea_events)]))\n",
     "\n",
     "# Enrich whole sliding window dataset by an events outline\n",
@@ -118,13 +118,14 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 8\n",
+    "event_num = 0\n",
     "event = annotated_apnea_events[event_num]\n",
+    "print(f\"Duration of chosen apnea event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
+    "print(f\"Type of chosen apnea event: {event.apnea_type.name}\")\n",
     "\n",
     "window_center_point = event.start + (event.end-event.start)/2\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
-    "\n",
-    "_ = window_data.signals.plot(figsize=(20, 10), subplots=True)"
+    "axes = window_data.signals.plot(figsize=(20, 10), subplots=True)"
    ]
   },
   {
@@ -167,7 +168,6 @@
     "#####\n",
     "\n",
     "data = pd.concat([window_data.signals[signal_name], peaks_ser, window_data.signals[\"Annotated apnea events\"]], axis=1).fillna(method=\"pad\")\n",
-    "\n",
     "data.plot(figsize=(20,7), subplots=False)\n",
     "\n",
     "overall_baseline = np.sqrt(np.mean([np.square(p.extreme_value) for p in peaks]))\n",
@@ -217,9 +217,9 @@
     "    low_peaks_mat[p.start:p.end] = p.extreme_value\n",
     "low_peaks_ser = pd.Series(low_peaks_mat, index = window_data.signals.index, name=\"AIRFLOW below-baseline peaks\")\n",
     "\n",
-    "# # ---------------\n",
+    "# ---------------\n",
     "\n",
-    "clusters, coarse_types = _detect_airflow_apnea_areas__new(window_data.signals[\"AIRFLOW\"].values, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz)\n",
+    "clusters, coarse_types = _detect_airflow_apnea_areas(window_data.signals[\"AIRFLOW\"].values, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz)\n",
     "cluster_mat = np.zeros(shape=(window_data.signals.shape[0],))\n",
     "for c in clusters:\n",
     "    cluster_mat[c.start:c.end] += 20.0\n",
@@ -230,7 +230,6 @@
     "\n",
     "\n",
     "data = pd.concat([window_data.signals[\"AIRFLOW\"], clusters_ser, window_data.signals[\"Annotated apnea events\"]], axis=1).fillna(method=\"pad\")\n",
-    "\n",
     "data.plot(figsize=(20,10), subplots=False)\n",
     "plt.axhline(y=overall_baseline, linestyle='--', color=\"pink\")\n",
     "plt.axhline(y=-overall_baseline, linestyle='--', color=\"pink\")\n",
@@ -238,6 +237,110 @@
     "# print(f\"Annotated event position: {window_data.signals.index.get_loc(event.start, method='nearest')}..{window_data.signals.index.get_loc(event.end, method='nearest')}\")\n",
     "None"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "### Apnea detection run over an entire dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "detected_apnea_events = detect_apneas(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz)\n",
+    "print(f\"Detected {len(detected_apnea_events)} apnea events\")\n",
+    "\n",
+    "# Enrich whole sliding window dataset by an events outline\n",
+    "detected_events_outline_mat = np.zeros(shape=(len(sliding_window_dataset.signals),))\n",
+    "for apnea_event in detected_apnea_events:\n",
+    "    start_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.start, method=\"nearest\")\n",
+    "    end_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.end, method=\"nearest\")\n",
+    "    detected_events_outline_mat[start_idx:end_idx] = 20.0\n",
+    "detected_events_outline_series = pd.Series(data=detected_events_outline_mat, index=sliding_window_dataset.signals.index)\n",
+    "sliding_window_dataset.signals[\"Detected apnea events\"] = detected_events_outline_series\n",
+    "\n",
+    "del detected_events_outline_series, detected_events_outline_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "event_num = 17\n",
+    "event = detected_apnea_events[event_num]\n",
+    "print(f\"Duration of chosen apnea event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
+    "print(f\"Type of chosen apnea event: {event.apnea_type.name}\")\n",
+    "\n",
+    "window_center_point = event.start + (event.end-event.start)/2\n",
+    "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
+    "_ = window_data.signals.plot(figsize=(20, 15), subplots=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "### Determine overlaps DETECTED vs. ANNOTATED apnea events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "n_overlapping_events = 0\n",
+    "for a_ in annotated_apnea_events:\n",
+    "    for d_ in detected_apnea_events:\n",
+    "        if a_.overlaps(d_):\n",
+    "            n_overlapping_events += 1\n",
+    "            break\n",
+    "\n",
+    "print(f\"Number of annotated events: {len(annotated_apnea_events)}\")\n",
+    "print(f\"Number of detected events: {len(detected_apnea_events)}\")\n",
+    "print(f\"Number of OVERLAPPING events: {n_overlapping_events}\")\n",
+    "print()\n",
+    "print(\"Scores:\")\n",
+    "print(f\"- Coverage of annotated apnea events: {n_overlapping_events/len(annotated_apnea_events)*100:.1f}%\")\n",
+    "print(f\"- Detected but unlabeled events: {n_overlapping_events/len(detected_apnea_events)*100:.1f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
