- extended ApneaEvent by SleepStageEvent - extended HypoApnea detection by checking SaO2 value

--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -37,7 +37,7 @@
     "import scipy.fftpack\n",
     "\n",
     "from util.paths import DATA_PATH\n",
-    "from util.datasets.sliding_window import SlidingWindowDataset\n",
+    "from util.datasets import SlidingWindowDataset, read_physionet_dataset, ApneaType\n",
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
     "from util.mathutil import get_peaks, PeakType, cluster_1d, Cluster\n",
     "from util.rule_based_apnea_detector import detect_apneas, _detect_airflow_apnea_areas\n",
@@ -61,14 +61,14 @@
     "config = SlidingWindowDataset.Config(\n",
     "    physionet_dataset_folder=dataset_folder,\n",
     "    downsample_frequency_hz=5,\n",
-    "    time_window_size=pd.Timedelta(\"2 minutes\")\n",
+    "    time_window_size=pd.Timedelta(\"5 minutes\")\n",
     ")\n",
     "sliding_window_dataset = SlidingWindowDataset(config=config, allow_caching=True)\n",
     "\n",
     "print(f\"#Physionet dataset samples: {len(sliding_window_dataset.signals)}\")\n",
     "print(f\"#Sliding window positions: {len(sliding_window_dataset)}\")\n",
     "print(f\"Timeframe of sliding window positions: {sliding_window_dataset.valid_center_points[-1] - sliding_window_dataset.valid_center_points[0]}\")\n",
-    "print(f\"Apnea events list present: {sliding_window_dataset.apnea_events is not None}\")\n"
+    "print(f\"Apnea events list present: {sliding_window_dataset.apnea_events is not None}\")"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "for apnea_event in annotated_apnea_events:\n",
     "    start_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.start, method=\"nearest\")\n",
     "    end_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.end, method=\"nearest\")\n",
-    "    annotated_events_outline_mat[start_idx:end_idx] = 10.0\n",
+    "    annotated_events_outline_mat[start_idx:end_idx] = 1\n",
     "annotated_events_outline_series = pd.Series(data=annotated_events_outline_mat, index=sliding_window_dataset.signals.index)\n",
     "sliding_window_dataset.signals[\"Annotated apnea events\"] = annotated_events_outline_series\n",
     "\n",
@@ -118,14 +118,14 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 0\n",
+    "event_num = 6\n",
     "event = annotated_apnea_events[event_num]\n",
     "print(f\"Duration of chosen apnea event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
     "print(f\"Type of chosen apnea event: {event.apnea_type.name}\")\n",
     "\n",
     "window_center_point = event.start + (event.end-event.start)/2\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
-    "axes = window_data.signals.plot(figsize=(20, 10), subplots=True)"
+    "axes = window_data.signals.plot(figsize=(20, 13), subplots=True)"
    ]
   },
   {
@@ -259,15 +259,23 @@
    },
    "outputs": [],
    "source": [
-    "detected_apnea_events = detect_apneas(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz)\n",
+    "detected_apnea_events = detect_apneas(sliding_window_dataset.signals,\n",
+    "                                      sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz,\n",
+    "                                      ignore_wake_stages=False)\n",
+    "detected_hypo_apnea_events = [d_ for d_ in detected_apnea_events if d_.apnea_type == ApneaType.HypoApnea]\n",
+    "# detected_apnea_events = [d_ for d_ in detected_apnea_events if d_.apnea_type != ApneaType.HypoApnea]\n",
+    "\n",
+    "print()\n",
+    "# print(f\"Detected {len(detected_apnea_events)} apnea events & {len(detected_hypo_apnea_events)} hypo apnea events\")\n",
     "print(f\"Detected {len(detected_apnea_events)} apnea events\")\n",
+    "print(f\" ..of which are {len(detected_hypo_apnea_events)} hypo apneas\")\n",
     "\n",
     "# Enrich whole sliding window dataset by an events outline\n",
     "detected_events_outline_mat = np.zeros(shape=(len(sliding_window_dataset.signals),))\n",
     "for apnea_event in detected_apnea_events:\n",
     "    start_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.start, method=\"nearest\")\n",
     "    end_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.end, method=\"nearest\")\n",
-    "    detected_events_outline_mat[start_idx:end_idx] = 20.0\n",
+    "    detected_events_outline_mat[start_idx:end_idx] = 1\n",
     "detected_events_outline_series = pd.Series(data=detected_events_outline_mat, index=sliding_window_dataset.signals.index)\n",
     "sliding_window_dataset.signals[\"Detected apnea events\"] = detected_events_outline_series\n",
     "\n",
@@ -284,25 +292,24 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 17\n",
-    "event = detected_apnea_events[event_num]\n",
-    "print(f\"Duration of chosen apnea event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
-    "print(f\"Type of chosen apnea event: {event.apnea_type.name}\")\n",
+    "overlapping_events = []\n",
+    "for a_ in annotated_apnea_events:\n",
+    "    for d_ in detected_apnea_events:\n",
+    "        if a_.overlaps(d_):\n",
+    "            if a_ not in overlapping_events:\n",
+    "                overlapping_events += [a_]\n",
+    "            break\n",
     "\n",
-    "window_center_point = event.start + (event.end-event.start)/2\n",
-    "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
-    "_ = window_data.signals.plot(figsize=(20, 15), subplots=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### Determine overlaps DETECTED vs. ANNOTATED apnea events"
+    "detected_but_not_annotated = [d_ for d_ in detected_apnea_events if not any(a_.overlaps(d_) for a_ in annotated_apnea_events)]\n",
+    "annotated_but_not_detected = [a_ for a_ in annotated_apnea_events if not any(d_.overlaps(a_) for d_ in detected_apnea_events)]\n",
+    "\n",
+    "print(f\"Number of annotated events: {len(annotated_apnea_events)}\")\n",
+    "print(f\"Number of detected events: {len(detected_apnea_events)}\")\n",
+    "print(f\"Number of OVERLAPPING events: {len(overlapping_events)}\")\n",
+    "print()\n",
+    "print(\"Scores:\")\n",
+    "print(f\"- Coverage of annotated apnea events: {len(overlapping_events)/len(annotated_apnea_events)*100:.1f}%\")\n",
+    "print(f\"- Detected but unlabeled events: {len(overlapping_events)/len(detected_apnea_events)*100:.1f}%\")"
    ]
   },
   {
@@ -315,21 +322,85 @@
    },
    "outputs": [],
    "source": [
-    "n_overlapping_events = 0\n",
-    "for a_ in annotated_apnea_events:\n",
-    "    for d_ in detected_apnea_events:\n",
-    "        if a_.overlaps(d_):\n",
-    "            n_overlapping_events += 1\n",
-    "            break\n",
+    "event_num = 23\n",
+    "# event = annotated_apnea_events[event_num]\n",
+    "# event = detected_apnea_events[event_num]\n",
+    "event = detected_but_not_annotated[event_num]\n",
+    "# event = annotated_but_not_detected[event_num]\n",
+    "# event = detected_hypo_apnea_events[event_num]\n",
+    "print(f\"Duration of chosen apnea event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
+    "print(f\"Type of chosen apnea event: {event.apnea_type.name}\")\n",
     "\n",
-    "print(f\"Number of annotated events: {len(annotated_apnea_events)}\")\n",
-    "print(f\"Number of detected events: {len(detected_apnea_events)}\")\n",
-    "print(f\"Number of OVERLAPPING events: {n_overlapping_events}\")\n",
-    "print()\n",
-    "print(\"Scores:\")\n",
-    "print(f\"- Coverage of annotated apnea events: {n_overlapping_events/len(annotated_apnea_events)*100:.1f}%\")\n",
-    "print(f\"- Detected but unlabeled events: {n_overlapping_events/len(detected_apnea_events)*100:.1f}%\")\n"
+    "window_center_point = event.start + (event.end-event.start)/2\n",
+    "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
+    "_ = window_data.signals.plot(figsize=(25, 13), subplots=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
