- refactor: renamed ApneaEvent and everything connected to it to RespiratoryEvent - first approach to classify detected apneas

--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -37,10 +37,10 @@
     "import scipy.fftpack\n",
     "\n",
     "from util.paths import DATA_PATH\n",
-    "from util.datasets import SlidingWindowDataset, read_physionet_dataset, ApneaType\n",
+    "from util.datasets import SlidingWindowDataset, read_physionet_dataset, RespiratoryEventType\n",
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
     "from util.mathutil import get_peaks, PeakType, cluster_1d, Cluster\n",
-    "from util.rule_based_apnea_detector import detect_apneas, _detect_airflow_apnea_areas\n",
+    "from util.rule_based_apnea_detector import detect_respiratory_events, _detect_airflow_resp_events\n",
     "\n",
     "# Some preparations to pretty-print tensors & ndarrays\n",
     "np.set_printoptions(edgeitems=10)\n",
@@ -57,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
+    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0289\"\n",
     "config = SlidingWindowDataset.Config(\n",
     "    physionet_dataset_folder=dataset_folder,\n",
     "    downsample_frequency_hz=5,\n",
@@ -68,7 +68,7 @@
     "print(f\"#Physionet dataset samples: {len(sliding_window_dataset.signals)}\")\n",
     "print(f\"#Sliding window positions: {len(sliding_window_dataset)}\")\n",
     "print(f\"Timeframe of sliding window positions: {sliding_window_dataset.valid_center_points[-1] - sliding_window_dataset.valid_center_points[0]}\")\n",
-    "print(f\"Apnea events list present: {sliding_window_dataset.apnea_events is not None}\")"
+    "print(f\"Respiratory events list present: {sliding_window_dataset.respiratory_events is not None}\")"
    ]
   },
   {
@@ -79,7 +79,7 @@
     }
    },
    "source": [
-    "### Filter events, such that we end up with only _apnea events_"
+    "### Filter events, such that we end up with only _respiratory events_"
    ]
   },
   {
@@ -92,18 +92,23 @@
    },
    "outputs": [],
    "source": [
-    "annotated_apnea_events = sliding_window_dataset.apnea_events\n",
-    "print(f\"{len(annotated_apnea_events)} annotated apnea events:\")\n",
-    "print(\" - \" + \"\\n - \".join([f\"#{i}: {evt}\" for i, evt in enumerate(annotated_apnea_events)]))\n",
+    "annotated_respiratory_events = sliding_window_dataset.respiratory_events\n",
+    "\n",
+    "respiratory_event_type_counter = Counter([e.event_type for e in annotated_respiratory_events])\n",
+    "print(\"Respiratory event types as per annotations:\")\n",
+    "print(\" - \" + \"\\n - \".join(f\"{klass.name}: {cnt}\" for klass, cnt in respiratory_event_type_counter.items()))\n",
+    "print()\n",
+    "print(f\"{len(annotated_respiratory_events)} annotated respiratory events:\")\n",
+    "print(\" - \" + \"\\n - \".join([f\"#{i}: {evt}\" for i, evt in enumerate(annotated_respiratory_events)]))\n",
     "\n",
     "# Enrich whole sliding window dataset by an events outline\n",
     "annotated_events_outline_mat = np.zeros(shape=(len(sliding_window_dataset.signals),))\n",
-    "for apnea_event in annotated_apnea_events:\n",
-    "    start_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.start, method=\"nearest\")\n",
-    "    end_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.end, method=\"nearest\")\n",
+    "for event in annotated_respiratory_events:\n",
+    "    start_idx = sliding_window_dataset.signals.index.get_loc(event.start, method=\"nearest\")\n",
+    "    end_idx = sliding_window_dataset.signals.index.get_loc(event.end, method=\"nearest\")\n",
     "    annotated_events_outline_mat[start_idx:end_idx] = 1\n",
     "annotated_events_outline_series = pd.Series(data=annotated_events_outline_mat, index=sliding_window_dataset.signals.index)\n",
-    "sliding_window_dataset.signals[\"Annotated apnea events\"] = annotated_events_outline_series\n",
+    "sliding_window_dataset.signals[\"Annotated respiratory events\"] = annotated_events_outline_series\n",
     "\n",
     "del annotated_events_outline_series, annotated_events_outline_mat"
    ]
@@ -119,9 +124,9 @@
    "outputs": [],
    "source": [
     "event_num = 6\n",
-    "event = annotated_apnea_events[event_num]\n",
-    "print(f\"Duration of chosen apnea event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
-    "print(f\"Type of chosen apnea event: {event.apnea_type.name}\")\n",
+    "event = annotated_respiratory_events[event_num]\n",
+    "print(f\"Duration of chosen respiratory event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
+    "print(f\"Type of chosen respiratory event: {event.event_type.name}\")\n",
     "\n",
     "window_center_point = event.start + (event.end-event.start)/2\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
@@ -151,7 +156,7 @@
    "source": [
     "event_num = 2\n",
     "signal_name = \"AIRFLOW\"\n",
-    "event = annotated_apnea_events[event_num]\n",
+    "event = annotated_respiratory_events[event_num]\n",
     "\n",
     "window_center_point = event.start + (event.end-event.start)/2\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
@@ -167,7 +172,7 @@
     "\n",
     "#####\n",
     "\n",
-    "data = pd.concat([window_data.signals[signal_name], peaks_ser, window_data.signals[\"Annotated apnea events\"]], axis=1).fillna(method=\"pad\")\n",
+    "data = pd.concat([window_data.signals[signal_name], peaks_ser, window_data.signals[\"Annotated respiratory events\"]], axis=1).fillna(method=\"pad\")\n",
     "data.plot(figsize=(20,7), subplots=False)\n",
     "\n",
     "overall_baseline = np.sqrt(np.mean([np.square(p.extreme_value) for p in peaks]))\n",
@@ -183,7 +188,7 @@
     }
    },
    "source": [
-    "### AIRFLOW-based apnea detection development"
+    "### AIRFLOW-based detection development"
    ]
   },
   {
@@ -196,11 +201,15 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 2\n",
+    "event_num = 0\n",
     "signal_name = \"AIRFLOW\"\n",
-    "event = annotated_apnea_events[event_num]\n",
+    "event = annotated_respiratory_events[event_num]\n",
+    "# event = detected_but_not_annotated[event_num]\n",
     "\n",
     "window_center_point = event.start + (event.end-event.start)/2\n",
+    "window_start = window_center_point - sliding_window_dataset.config.time_window_size / 2\n",
+    "window_end = window_center_point + sliding_window_dataset.config.time_window_size / 2\n",
+    "\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
     "\n",
     "# --------------\n",
@@ -210,29 +219,43 @@
     "\n",
     "# ---------------\n",
     "\n",
-    "overall_baseline = np.sqrt(np.mean([np.square(p.extreme_value) for p in peaks]))\n",
-    "low_peaks = [p for p in peaks if abs(p.extreme_value)<=overall_baseline]\n",
-    "low_peaks_mat = np.zeros(shape=(window_data.signals.shape[0],))\n",
-    "for p in low_peaks:\n",
-    "    low_peaks_mat[p.start:p.end] = p.extreme_value\n",
-    "low_peaks_ser = pd.Series(low_peaks_mat, index = window_data.signals.index, name=\"AIRFLOW below-baseline peaks\")\n",
+    "# overall_baseline = np.sqrt(np.mean([np.square(p.extreme_value) for p in peaks]))\n",
+    "# low_peaks = [p for p in peaks if abs(p.extreme_value)<=overall_baseline]\n",
+    "# low_peaks_mat = np.zeros(shape=(window_data.signals.shape[0],))\n",
+    "# for p in low_peaks:\n",
+    "#     low_peaks_mat[p.start:p.end] = p.extreme_value\n",
+    "# low_peaks_ser = pd.Series(low_peaks_mat, index = window_data.signals.index, name=\"AIRFLOW below-baseline peaks\")\n",
     "\n",
     "# ---------------\n",
     "\n",
-    "clusters, coarse_types = _detect_airflow_apnea_areas(window_data.signals[\"AIRFLOW\"].values, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz)\n",
-    "cluster_mat = np.zeros(shape=(window_data.signals.shape[0],))\n",
-    "for c in clusters:\n",
-    "    cluster_mat[c.start:c.end] += 20.0\n",
-    "clusters_ser = pd.Series(cluster_mat, index=window_data.signals.index, name=\"AIRFLOW: detected apneas\")\n",
+    "# clusters, coarse_types = _detect_airflow_apnea_areas(window_data.signals[\"AIRFLOW\"].values, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz)\n",
+    "# cluster_mat = np.zeros(shape=(window_data.signals.shape[0],))\n",
+    "# for c in clusters:\n",
+    "#     cluster_mat[c.start:c.end] += 20.0\n",
+    "# clusters_ser = pd.Series(cluster_mat, index=window_data.signals.index, name=\"AIRFLOW: detected apneas\")\n",
+    "# print(\"Detected apneas:\")\n",
+    "# print(\" - \" + \"\\n - \".join([f\"{t.name}: {c.length/sliding_window_dataset.config.downsample_frequency_hz:.1f}s\" for c, t in detected_apnea_events]))\n",
+    "\n",
+    "detected_respiratory_events = detect_respiratory_events(signals=window_data.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, ignore_wake_stages=False)\n",
+    "detected_events_outline_mat = np.zeros(shape=(len(window_data.signals),))\n",
+    "for event in detected_respiratory_events:\n",
+    "    start_idx = window_data.signals.index.get_loc(event.start, method=\"nearest\")\n",
+    "    end_idx = window_data.signals.index.get_loc(event.end, method=\"nearest\")\n",
+    "    detected_events_outline_mat[start_idx:end_idx] = 1\n",
+    "detected_events_outline_series = pd.Series(data=detected_events_outline_mat, index=window_data.signals.index, name=\"Detected events\")\n",
+    "\n",
+    "print()\n",
+    "print(\"Annotated apneas in window:\")\n",
+    "annotated_in_window = [e for e in annotated_respiratory_events if e.end > window_start and e.start < window_end]\n",
+    "print(\" - \" + \"\\n - \".join([f\"{e.event_type.name}: {(e.end-e.start).total_seconds():.1f}s\" for e in annotated_in_window]))\n",
+    "print()\n",
     "print(\"Detected apneas:\")\n",
-    "print(\" - \" + \"\\n - \".join([f\"{t.name}: {c.length/sliding_window_dataset.config.downsample_frequency_hz:.1f}s\" for c, t in zip(clusters, coarse_types)]))\n",
+    "print(\" - \" + \"\\n - \".join([f\"{e.event_type.name}: {(e.end-e.start).total_seconds():.1f}s\" for e in detected_respiratory_events]))\n",
     "\n",
-    "\n",
-    "\n",
-    "data = pd.concat([window_data.signals[\"AIRFLOW\"], clusters_ser, window_data.signals[\"Annotated apnea events\"]], axis=1).fillna(method=\"pad\")\n",
-    "data.plot(figsize=(20,10), subplots=False)\n",
-    "plt.axhline(y=overall_baseline, linestyle='--', color=\"pink\")\n",
-    "plt.axhline(y=-overall_baseline, linestyle='--', color=\"pink\")\n",
+    "data = pd.concat([window_data.signals[\"ABD\"], window_data.signals[\"CHEST\"], window_data.signals[\"AIRFLOW\"], window_data.signals[\"Annotated respiratory events\"], detected_events_outline_series], axis=1).fillna(method=\"pad\")\n",
+    "axes = data.plot(figsize=(20,10), subplots=True)\n",
+    "# plt.axhline(y=overall_baseline, linestyle='--', color=\"pink\")\n",
+    "# plt.axhline(y=-overall_baseline, linestyle='--', color=\"pink\")\n",
     "\n",
     "# print(f\"Annotated event position: {window_data.signals.index.get_loc(event.start, method='nearest')}..{window_data.signals.index.get_loc(event.end, method='nearest')}\")\n",
     "None"
@@ -246,7 +269,7 @@
     }
    },
    "source": [
-    "### Apnea detection run over an entire dataset"
+    "### Detection run over an entire dataset"
    ]
   },
   {
@@ -259,25 +282,26 @@
    },
    "outputs": [],
    "source": [
-    "detected_apnea_events = detect_apneas(sliding_window_dataset.signals,\n",
-    "                                      sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz,\n",
-    "                                      ignore_wake_stages=False)\n",
-    "detected_hypo_apnea_events = [d_ for d_ in detected_apnea_events if d_.apnea_type == ApneaType.HypoApnea]\n",
-    "# detected_apnea_events = [d_ for d_ in detected_apnea_events if d_.apnea_type != ApneaType.HypoApnea]\n",
+    "detected_respiratory_events = \\\n",
+    "    detect_respiratory_events(sliding_window_dataset.signals,\n",
+    "                              sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz,\n",
+    "                              ignore_wake_stages=False)\n",
+    "detected_hypopnea_events = [d_ for d_ in detected_respiratory_events if d_.event_type == RespiratoryEventType.Hypopnea]\n",
+    "# detected_apnea_events = [d_ for d_ in detected_apnea_events if d_.apnea_type != ApneaType.Hypopnea]\n",
     "\n",
     "print()\n",
-    "# print(f\"Detected {len(detected_apnea_events)} apnea events & {len(detected_hypo_apnea_events)} hypo apnea events\")\n",
-    "print(f\"Detected {len(detected_apnea_events)} apnea events\")\n",
-    "print(f\" ..of which are {len(detected_hypo_apnea_events)} hypo apneas\")\n",
+    "# print(f\"Detected {len(detected_apnea_events)} apnea events & {len(detected_hypopnea_events)} hypopnea events\")\n",
+    "print(f\"Detected {len(detected_respiratory_events)} respiratory events\")\n",
+    "print(f\" ..of which are {len(detected_hypopnea_events)} hypopneas\")\n",
     "\n",
     "# Enrich whole sliding window dataset by an events outline\n",
     "detected_events_outline_mat = np.zeros(shape=(len(sliding_window_dataset.signals),))\n",
-    "for apnea_event in detected_apnea_events:\n",
-    "    start_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.start, method=\"nearest\")\n",
-    "    end_idx = sliding_window_dataset.signals.index.get_loc(apnea_event.end, method=\"nearest\")\n",
+    "for event in detected_respiratory_events:\n",
+    "    start_idx = sliding_window_dataset.signals.index.get_loc(event.start, method=\"nearest\")\n",
+    "    end_idx = sliding_window_dataset.signals.index.get_loc(event.end, method=\"nearest\")\n",
     "    detected_events_outline_mat[start_idx:end_idx] = 1\n",
     "detected_events_outline_series = pd.Series(data=detected_events_outline_mat, index=sliding_window_dataset.signals.index)\n",
-    "sliding_window_dataset.signals[\"Detected apnea events\"] = detected_events_outline_series\n",
+    "sliding_window_dataset.signals[\"Detected respiratory events\"] = detected_events_outline_series\n",
     "\n",
     "del detected_events_outline_series, detected_events_outline_mat"
    ]
@@ -293,23 +317,23 @@
    "outputs": [],
    "source": [
     "overlapping_events = []\n",
-    "for a_ in annotated_apnea_events:\n",
-    "    for d_ in detected_apnea_events:\n",
+    "for a_ in annotated_respiratory_events:\n",
+    "    for d_ in detected_respiratory_events:\n",
     "        if a_.overlaps(d_):\n",
     "            if a_ not in overlapping_events:\n",
     "                overlapping_events += [a_]\n",
     "            break\n",
     "\n",
-    "detected_but_not_annotated = [d_ for d_ in detected_apnea_events if not any(a_.overlaps(d_) for a_ in annotated_apnea_events)]\n",
-    "annotated_but_not_detected = [a_ for a_ in annotated_apnea_events if not any(d_.overlaps(a_) for d_ in detected_apnea_events)]\n",
+    "detected_but_not_annotated = [d_ for d_ in detected_respiratory_events if not any(a_.overlaps(d_) for a_ in annotated_respiratory_events)]\n",
+    "annotated_but_not_detected = [a_ for a_ in annotated_respiratory_events if not any(d_.overlaps(a_) for d_ in detected_respiratory_events)]\n",
     "\n",
-    "print(f\"Number of annotated events: {len(annotated_apnea_events)}\")\n",
-    "print(f\"Number of detected events: {len(detected_apnea_events)}\")\n",
+    "print(f\"Number of annotated events: {len(annotated_respiratory_events)}\")\n",
+    "print(f\"Number of detected events: {len(detected_respiratory_events)}\")\n",
     "print(f\"Number of OVERLAPPING events: {len(overlapping_events)}\")\n",
     "print()\n",
     "print(\"Scores:\")\n",
-    "print(f\"- Coverage of annotated apnea events: {len(overlapping_events)/len(annotated_apnea_events)*100:.1f}%\")\n",
-    "print(f\"- Detected but unlabeled events: {len(overlapping_events)/len(detected_apnea_events)*100:.1f}%\")"
+    "print(f\"- Coverage of annotated respiratory events {len(overlapping_events)/len(annotated_respiratory_events)*100:.1f}%\")\n",
+    "print(f\"- Detected events that also appear in annotations: {len(overlapping_events)/len(detected_respiratory_events)*100:.1f}%\")"
    ]
   },
   {
@@ -322,18 +346,28 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 23\n",
-    "# event = annotated_apnea_events[event_num]\n",
-    "# event = detected_apnea_events[event_num]\n",
-    "event = detected_but_not_annotated[event_num]\n",
+    "event_num = 0\n",
+    "event = annotated_respiratory_events[event_num]\n",
+    "# event = detected_respiratory_events[event_num]\n",
+    "# event = detected_but_not_annotated[event_num]\n",
     "# event = annotated_but_not_detected[event_num]\n",
-    "# event = detected_hypo_apnea_events[event_num]\n",
-    "print(f\"Duration of chosen apnea event #{event_num}: {(event.end-event.start).total_seconds():.1f}s\")\n",
-    "print(f\"Type of chosen apnea event: {event.apnea_type.name}\")\n",
+    "# event = detected_hypopnea_events[event_num]\n",
     "\n",
     "window_center_point = event.start + (event.end-event.start)/2\n",
+    "window_start = window_center_point - sliding_window_dataset.config.time_window_size / 2\n",
+    "window_end = window_center_point + sliding_window_dataset.config.time_window_size / 2\n",
+    "\n",
+    "annotated_in_window = [e for e in annotated_respiratory_events if e.end > window_start and e.start < window_end]\n",
+    "detected_in_window = [e for e in detected_respiratory_events if e.end > window_start and e.start < window_end]\n",
+    "print()\n",
+    "print(\"Annotated respiratory events in window:\")\n",
+    "print(\" - \" + \"\\n - \".join([f\"{e.event_type.name}: {(e.end-e.start).total_seconds():.1f}s\" for e in annotated_in_window]))\n",
+    "print()\n",
+    "print(\"Detected respiratory events in window:\")\n",
+    "print(\" - \" + \"\\n - \".join([f\"{e.event_type.name}: {(e.end-e.start).total_seconds():.1f}s\" for e in detected_in_window]))\n",
+    "\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
-    "_ = window_data.signals.plot(figsize=(25, 13), subplots=True)\n"
+    "_ = window_data.signals.plot(figsize=(25, 12), subplots=True)\n"
    ]
   },
   {
