- added Seaborn to environment.yml - introduced respirative-event-based metrics

--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -41,6 +41,7 @@
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
     "from util.mathutil import get_peaks, PeakType, cluster_1d, Cluster\n",
     "from util.rule_based_apnea_detector import detect_respiratory_events, _detect_airflow_resp_events\n",
+    "from util.event_based_metrics import EventBasedConfusionMatrix, get_overlaps\n",
     "\n",
     "# Some preparations to pretty-print tensors & ndarrays\n",
     "np.set_printoptions(edgeitems=10)\n",
@@ -333,7 +334,18 @@
     "print()\n",
     "print(\"Scores:\")\n",
     "print(f\"- Coverage of annotated respiratory events {len(overlapping_events)/len(annotated_respiratory_events)*100:.1f}%\")\n",
-    "print(f\"- Detected events that also appear in annotations: {len(overlapping_events)/len(detected_respiratory_events)*100:.1f}%\")"
+    "print(f\"- Detected events that also appear in annotations: {len(overlapping_events)/len(detected_respiratory_events)*100:.1f}%\")\n",
+    "print()\n",
+    "\n",
+    "np.seterr('raise')\n",
+    "\n",
+    "confusion_matrix = EventBasedConfusionMatrix(annotated_events=annotated_respiratory_events, detected_events=detected_respiratory_events)\n",
+    "macro_scores = confusion_matrix.get_macro_scores()\n",
+    "print(\"Confusion-matrix based macro scores:\")\n",
+    "print(f\" -> {macro_scores}\")\n",
+    "\n",
+    "plt.figure(figsize=(7, 7), dpi=80)\n",
+    "confusion_matrix.plot(title=None)\n"
    ]
   },
   {
